data/derived/comb/progs/unify/prog6367.ml.out
Characters 99-117:
  | false ->if n / 10 = 0 then [n mod 10] else digitsOfInt (n/10):: n mod 10;;
                                               ^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
